# minerp

./: Cargo.toml  Dockerfile
.github/workflows/: build.yml
minerp-client/: Cargo.toml
minerp-client/src/: main.rs
minerp-common/: Cargo.toml
minerp-common/src/: lib.rs
minerp-server/: Cargo.toml
minerp-server/src/: main.rs
